out.txt
HashTable.cpp:10:50: error: cannot declare member function ‘static int HashTable::getHashCode(const char*)’ to have static linkage [-fpermissive]
   10 | static int HashTable::getHashCode(const char *str){
      |                                                  ^
HashTable.cpp:22:1: error: default argument given for parameter 1 of ‘HashTable::HashTable(int)’ [-fpermissive]
   22 | HashTable::HashTable(int capacity=8){
      | ^~~~~~~~~
In file included from HashTable.cpp:4:
HashTable.hpp:21:9: note: previous specification in ‘HashTable::HashTable(int)’ here
   21 |         HashTable(int capacity=8);
      |         ^~~~~~~~~
HashTable.cpp:109:1: error: ‘virtual’ outside class declaration
  109 | virtual bool HashTable::add(const string &s) {
      | ^~~~~~~
HashTable.cpp:145:1: error: ‘virtual’ outside class declaration
  145 | virtual bool HashTable::add(const char *s) {
      | ^~~~~~~
HashTable.cpp:150:1: error: ‘virtual’ outside class declaration
  150 | virtual bool HashTable::remove(const string &s){
      | ^~~~~~~
HashTable.cpp:177:1: error: ‘virtual’ outside class declaration
  177 | virtual bool HashTable::remove(const char *s){
      | ^~~~~~~
